-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.4, 5.13.0
-
None
-
-
24bb272ac83fe42ad4cab58a9e97bdf2a53d2be8 (qt/qtwebengine/5.15)
Apparently when a key is held down when a browser has focus the JS KeyboardEvent API should only see one keyup event at the end of the sequence and .repeat should be false on it. Currently keyup events are sent for every repetition in the sequence (with .repeat set to true).
Some refernences https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent#Auto-repeat_handling and http://unixpapa.com/js/key.html
You can test on this page https://unixpapa.com/js/testkey.html
I only tested on X11 and Windows 10 (5.12) but I assume it happens on other desktop platforms too.
- resulted from
-
QTBUG-55384 QtWebEngine crashes on Wayland
-
- Closed
-
For Gerrit Dashboard: QTBUG-77208 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
279350,2 | Fix handling of autorepeating KeyRelease events | 5.14 | qt/qtwebengine | Status: MERGED | +2 | 0 |