Fix handling of autorepeating KeyRelease events

A regression in 5.10 has resulted in the web events generated for autorepeating
keys not conforming to the spec. Restore the correct behavior from 5.9.

Fixes: QTBUG-77208
Change-Id: Ia2f07fd4a8ee78c4599b36aceb235c245a49d566
Reviewed-by: Michal Klocek <michal.klocek@qt.io>